[tool.poetry]
name = "pytest-aioresponses"
version = "0.2.0"
description = "py.test integration for aioresponses"
authors = ["Konstantin Manna <Konstantin@Manna.uno>"]
license = "MIT"
keywords = ["pytest", "aioresponses"]
homepage = "https://github.com/pheanex/pytest-aioresponses"
repository = "https://github.com/pheanex/pytest-aioresponses"
readme = "README.rst"
classifiers = [
    'Development Status :: 4 - Beta',
    'Framework :: Pytest',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Testing',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
]
include = ["pytest_aioresponses.py"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = ">=3.5.0"
pytest-asyncio = ">=0.14.0"
aioresponses = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
pylint = "^2.6.0"

[tool.poetry.plugins.pytest11]
aioresponses = "pytest_aioresponses"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
]
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

